Fix help box alignment

--- a/app/assets/stylesheets/mixins.less
+++ b/app/assets/stylesheets/mixins.less
@@ -36,7 +36,6 @@
   border: 1px solid @text-color;
   font: 1em @font-family-serif;
   position: relative;
-  margin-top: 1.2em;
   background-color: @help-bg;
 
   p {
